Align footer correctly

--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -15,8 +15,15 @@ html {
 
 /* Set core body defaults */
 body {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
     text-rendering: optimizeSpeed;
     line-height: 1.5;
+}
+
+main {
+    flex: 1;
 }
 
 /* A elements that don't have a class get default styles */
@@ -42,22 +49,22 @@ img {
     }
 }
 
-// .footer {
-//     padding: 0 1.28rem 1.28rem;
-//     font-family: 'Lexend Deca', sans-serif;
-//     font-size: 1.2rem;
-//     text-align: center;
+.footer {
+    padding: 0 1.28rem 1.28rem;
+    font-family: 'Kumbh Sans', sans-serif;
+    font-size: 1.2rem;
+    text-align: center;
 
-//     &__link {
-//         color: v.$very-dark-cyan;
+    &__link {
+        // color: v.$very-dark-cyan;
 
-//         &:hover {
-//             color: scale-color(v.$very-dark-cyan, $lightness: 10%);
-//         }
+        &:hover {
+            // color: scale-color(v.$very-dark-cyan, $lightness: 10%);
+        }
 
-//         &:focus-visible {
-//             outline: 2px solid v.$black;
-//             border-radius: 1px;
-//         }
-//     }
-// }
+        &:focus-visible {
+            outline: 2px solid v.$black;
+            border-radius: 1px;
+        }
+    }
+}
